<resources>
    <string name="app_name">Encharity-v1</string>
    <!--MainActivity toolbar-->
    <string name="search">Search</string>

    <!--Tabs-->
    <string name="kids_tab">All</string>
    <string name="adults_tab">Urgent</string>

    <!--Nav header-->
    <string name="user_name">Rakhmetov O.</string>
    <!--Nav commands-->
    <string name="nav_mission">Mission</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_blog">Blog</string>
    <string name="nav_about">About</string>
    <string name="nav_contacts">Contacts</string>

    <!-- patient details -->
    <string name="view_all">View all</string>
    <string name="investments_header">Investments</string>
    <string name="status_updates_header">Status updates</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close Navigation drawer</string>

    <!--Mission, About, Contacts-->
    <string name="mission_header">Mission</string>
    <string name="contacts_header">Contacts</string>
    <string name="about_us_header">About us</string>

    <string name="mission_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum
                    dolor sit amet, consectetur adipiscing elit, sed do
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</string>
    <string name="contacts_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum
                    dolor sit amet, consectetur adipiscing elit, sed do
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</string>
    <string name="about_us_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum
                    dolor sit amet, consectetur adipiscing elit, sed do
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</string>

    <!--Archive, Blog-->

    <string name="archive_header">Archive</string>
    <string name="archive_description">This is Archive section. The purpose of this section is to show
        people who won their illnesses. Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed
        do Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="blog_header">Blog</string>
    <string name="blog_description">This is Blog section. The purpose of this section is to inspire
        patients and other people, share with some interesting topics. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </string>


</resources>
